# alexnet_cpp

./: .gitignore  CMakeLists.txt  README.md  cnn.cpp  cnn.hpp  main.cpp  utils.cpp
alexnet/: alexnet.cpp  alexnet.hpp
python/: get_init_weight.py  pytorch_network.py  pytorch_train_test.py  set_trained_weight.py
